--- a/templates/userEmployee.html
+++ b/templates/userEmployee.html
@@ -4,7 +4,7 @@
           <div class="item">
               <span class="input-label">用户名称</span>
               <span class="input-label">{{userInfo.user.name}}</span>
-              <span class="input-label">用户类型</span>
+              <span class="input-label">用户权限</span>
               <span class="input-label">{{showAuthType(userInfo.user.authType)}}</span>
           </div>
           <button class="button button-block button-calm" ng-click="changePassword()">修改密码</button>
